# vtt-bot

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature_request.yaml
.github/workflows/: build-push-docker.yml  deploy.yml  deploy_vtt_bot.yml  lint.yml  test.yml
config/systemd/: myapp.service.template
docs/: index.md
scripts/: lint.sh  run_dev.sh  run_tests.sh
src/: bot.py  config.py  db_helpers.py  media_processor.py  utils.py
tests/: example.test.js  test_example.py
